--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
 <body>
   <div id="root"></div>
 
-  <script>
+<!--   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const loadEl = document.querySelector('#load');
       // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
@@ -139,9 +139,9 @@
         loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
       }
     });
-  </script>
+  </script> -->
   <p>desplegado</p>
-  <script src="../build/main.js"></script>"
+  <script src="./main.js"></script>"
 </body>
 
 </html>
