--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
     });
   </script> -->
   <p>desplegado</p>
-  <script src="./main.js"></script>"
+  <script src="./main.js"></script>
 </body>
 
 </html>
