--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,8 @@
       }
     });
   </script>
-  <script src="./main.js"></script>
+  <p>jhadsjhgjasd</p>
+ <!--  <script src="./main.js"></script> -->
 </body>
 
 </html>
