--- a/public/index.html
+++ b/public/index.html
@@ -140,8 +140,7 @@
       }
     });
   </script>
-  <p>jhadsjhgjasd</p>
- <!--  <script src="./main.js"></script> -->
+  <script src="./main.js"></script>
 </body>
 
 </html>
