--- a/public/index.html
+++ b/public/index.html
@@ -140,8 +140,8 @@
       }
     });
   </script>
-  <p>funciona por favor</p>
-  
+  <p>funciona par favar favor</p>
+
   <script src="./main.js"></script>
 </body>
 
