--- a/src/index.html
+++ b/src/index.html
@@ -9,26 +9,9 @@
 
   <script src="./main.js"></script>
 
-  <!-- update the version number as needed -->
-  <script defer src="/__/firebase/9.14.0/firebase-app-compat.js"></script>
-  <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/9.14.0/firebase-auth-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-database-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-firestore-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-functions-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-messaging-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-storage-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-analytics-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-remote-config-compat.js"></script>
-  <script defer src="/__/firebase/9.14.0/firebase-performance-compat.js"></script>
-  <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-  <script>
+<!--   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      const loadEl = document.getElementsById('root');
+      const loadEl = document.getElementById('root');
       // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
       // // The Firebase SDK is initialized and available here!
       //
@@ -63,7 +46,7 @@
         loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
       }
     });
-  </script>
+  </script> -->
   </body>
 
 </html>
